@@ -2,6 +2,10 @@
 Release 1.0.1
 =============
 
+* median is now removed per shanks
+* common ground syntax slightly changed, to allow one ground per shank
+* fix a bug when collect_all and dense templates
+
 =============
 Release 1.0.0
 =============
